Completed Browse Page and Accounts Page Completely

--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -21,7 +21,7 @@
         <img src="https://s-media-cache-ak0.pinimg.com/originals/97/e6/13/97e613c2e0a03eef5321108f10abb635.jpg">
         
       </ion-avatar>
-      <h1> Asa Butterfield </h1>
+      <h1> {{user.firstName}} {{user.lastName}} </h1>
       <span color="danger" (click)="viewProfile()"> View Profile </span>
     </ion-item>
     <ion-item-divider no-lines color="gray">  </ion-item-divider>
