--- a/pages/browse/browse.html
+++ b/pages/browse/browse.html
@@ -7,12 +7,17 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Browse</ion-title>
+    <ion-title>Categories</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content no-lines>
+  <ion-list inset>
+    <ion-item *ngFor="let category of categories" (click)="itemSelected(category)">
+      {{category.category}}
+      <ion-icon name="arrow-dropright" item-right> </ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
