--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -18,7 +18,7 @@
   <ion-list inset>
     <ion-item>
       <ion-avatar item-left>
-        <img src="https://s-media-cache-ak0.pinimg.com/originals/97/e6/13/97e613c2e0a03eef5321108f10abb635.jpg">
+        <ion-img [src]="user.profilePicture"> </ion-img>
         
       </ion-avatar>
       <h1> {{user.firstName}} {{user.lastName}} </h1>
