--- a/pages/sub-browse/sub-browse.html
+++ b/pages/sub-browse/sub-browse.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <ion-list inset>
-    <ion-item *ngFor="let subcategory of subcategories" (click)="itemSelected(category)">
+    <ion-item *ngFor="let subcategory of subcategories" (click)="itemSelected(subcategory)">
       {{subcategory}}
     </ion-item>
   </ion-list>
