--- a/pages/add-listing/add-listing.html
+++ b/pages/add-listing/add-listing.html
@@ -23,6 +23,14 @@
     <ion-item-divider no-lines color="gray"></ion-item-divider>
 
     <ion-item>
+      <ion-icon item-left name="camera" *ngIf="!pictureSelected"></ion-icon> 
+      <ion-avatar item-left *ngIf="pictureSelected">
+        <ion-img [src]="pictureURI"> </ion-img>
+      </ion-avatar>
+      <button ion-button outline small (click)="uploadPic()"> Upload Photo </button>
+    </ion-item>
+
+    <ion-item>
       <ion-label floating> Name </ion-label>
       <ion-input type="text" [(ngModel)]="listing.name"></ion-input>
     </ion-item>
