--- a/pages/search/search.html
+++ b/pages/search/search.html
@@ -13,6 +13,22 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-list no-lines no-padding no-margin>
+    <ion-item>
+      <ion-input type="text" placeholder="Search" [(ngModel)]="keyword"> </ion-input>
+      <button ion-button clear icon-only item-right (click)="getResults()"> <ion-icon name="search"></ion-icon> </button>
+    </ion-item>
+
+    <ion-card style="padding:5px;" *ngFor="let listing of listings" (click)="seeListing(listing)" >
+            <ion-img [src]="listing.picture"></ion-img>
+            <h1> {{listing.name}} </h1>
+            <ion-row>
+              <ion-col> Brand: {{listing.brand}} </ion-col>
+              <ion-col> </ion-col>
+              <ion-col end> Views: <ion-badge> {{listing.views}} </ion-badge> </ion-col>
+            </ion-row>
+        </ion-card>
+  </ion-list>
 
 </ion-content>
