--- a/pages/tabs/tabs.html
+++ b/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Browse" tabIcon="apps"></ion-tab>
-  <!--<ion-tab [root]="tab3Root" tabTitle="Search" tabIcon="search"></ion-tab>-->
+  <ion-tab [root]="tab3Root" tabTitle="Search" tabIcon="search"></ion-tab>
   <ion-tab [root]="tab4Root" [tabTitle]="tab4title" tabIcon="contact"></ion-tab>
   <!--<ion-tab *ngIf="token != NULL" [root]="tab4Root1" tabTitle="Account" tabIcon="contact"></ion-tab>-->
 </ion-tabs>
