--- a/pages/add-listing/add-listing.html
+++ b/pages/add-listing/add-listing.html
@@ -25,7 +25,7 @@
     <ion-item>
       <ion-icon item-left name="camera" *ngIf="!pictureSelected"></ion-icon> 
       <ion-avatar item-left *ngIf="pictureSelected">
-        <ion-img [src]="pictureURI"> </ion-img>
+        <img [src]="pictureURI"/> 
       </ion-avatar>
       <button ion-button outline small (click)="uploadPic()"> Upload Photo </button>
     </ion-item>
