--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -5,14 +5,22 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-list>
     <div  *ngFor="let category of categories; let i = index">
       <ion-item-divider>Popular in {{category.category}}</ion-item-divider>
     <ion-item>
       <ion-list>
         <ion-item *ngFor = "let listing of results[i]" (click)="seeListing(listing)">
-          <ion-thumbnail item-left><ion-img [src]="'http://139.59.5.156/test/uploads/'+listing.picture"> </ion-img></ion-thumbnail>
-          <h2> {{listing.name}} </h2>
+          <ion-thumbnail item-left><img [src]="'http://139.59.5.156/test/uploads/'+listing.picture"/> </ion-thumbnail>
+          <h2> {{listing.name}} </h2> 
           <h4> Brand :  {{listing.brand}} </h4>
         </ion-item>
       </ion-list>
